# math-logic

./: CMakeLists.txt  Makefile  README.md  grammar.h  main.cpp  parser.cpp  parser.h  task1_parse.cpp  task2_minimize.cpp  task3_arithmetic.cpp  task4_prove.cpp  test.cpp
grammar/: expression.cpp  expression.h  grammar.cpp  grammar.h  lib.h  proof.cpp  proof.h
hw/: CMakeLists.txt  ackermann.cpp  ct_tuple.h  godel.h  task.tex  task1.cpp  task2.cpp  test1.cpp  test2.cpp  test3.cpp  typelist.h
hw/extra/: tuple.cpp
hw/lib/: ackermann.h  recursive.h
hw/samples/: task1.cpp  task2.cpp  task3.cpp
hw/tests/: test1.cpp  test2.cpp  test3.cpp
labs/: CMakeLists.txt  README.md  TODO  task1_parse.cpp  task2_minimize.cpp  task3_arithmetic.cpp  task4_prove.cpp
labs/grammar/: expression.cpp  lib.h
labs/parser/: lib.h  parser.cpp  parser.h  proof_parser.h
labs/proof/: auto_prove.cpp  auto_prove.h  proof.cpp  proof.h  structures.cpp  structures.h
parser/: errors.h  parser.cpp  parser.h  parser_error.h  proof_parser.cpp  proof_parser.h
proof/: auto_prove.cpp  auto_prove.h  lib.h  proof.cpp  proof.h  proof_parser.cpp  proof_parser.h  structures.cpp  structures.h
utils/: grammar.cpp  grammar.h
